# wedding-thank-yous

./: Cargo.toml  README.md  input.csv
src/: cli.rs  context.rs  error.rs  main.rs
src/mailer/: mod.rs  template.rs
src/models/: mod.rs
