[package]
name = "thank-you-letters"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lettre = "0.10"
serde = { version = "1.0.126", features = ["derive"] }
csv = "1.1.6"
rust_decimal = "1.14.1"
rust_decimal_macros = "1.14.1"
clap = { version = "4.0.19", features = ["derive"] }
thiserror = "1.0.37"